--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -257,57 +257,51 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="placeCellID" rowHeight="152" id="Kq0-kF-s0X" customClass="LocationPlaceTableViewCell">
-                                <rect key="frame" x="0.0" y="28" width="600" height="152"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="placeCellID" rowHeight="150" id="Kq0-kF-s0X" customClass="LocationPlaceTableViewCell">
+                                <rect key="frame" x="0.0" y="28" width="600" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kq0-kF-s0X" id="aXc-Bn-6F1">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="151"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="149"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qLm-g3-e4N">
-                                            <rect key="frame" x="10" y="10" width="131" height="131"/>
+                                            <rect key="frame" x="10" y="-26" width="200" height="201"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="qLm-g3-e4N" secondAttribute="height" multiplier="1:1" id="hoY-MU-4gS"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="260-9K-NXX">
-                                            <rect key="frame" x="151" y="80" width="439" height="60"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="260-9K-NXX">
+                                            <rect key="frame" x="225" y="75" width="365" height="60"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7K-PZ-AXb">
-                                            <rect key="frame" x="151" y="10" width="439" height="60"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="Z7K-PZ-AXb">
+                                            <rect key="frame" x="225" y="10" width="365" height="60"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                             <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="260-9K-NXX" secondAttribute="bottom" constant="10" id="0zS-ud-6GN"/>
                                         <constraint firstItem="Z7K-PZ-AXb" firstAttribute="height" secondItem="aXc-Bn-6F1" secondAttribute="height" multiplier="0.4" id="2CY-U5-zlu"/>
                                         <constraint firstItem="260-9K-NXX" firstAttribute="height" secondItem="aXc-Bn-6F1" secondAttribute="height" multiplier="0.4" id="4kB-lU-SWC"/>
                                         <constraint firstItem="qLm-g3-e4N" firstAttribute="leading" secondItem="aXc-Bn-6F1" secondAttribute="leading" constant="10" id="5Lp-vY-bOX"/>
-                                        <constraint firstItem="260-9K-NXX" firstAttribute="top" secondItem="Z7K-PZ-AXb" secondAttribute="bottom" constant="10" id="AWR-LN-mae"/>
-                                        <constraint firstItem="260-9K-NXX" firstAttribute="top" secondItem="Z7K-PZ-AXb" secondAttribute="bottom" constant="5" id="B5s-6N-pJ9"/>
+                                        <constraint firstItem="260-9K-NXX" firstAttribute="top" secondItem="Z7K-PZ-AXb" secondAttribute="bottom" constant="5" id="AWR-LN-mae"/>
+                                        <constraint firstAttribute="width" secondItem="qLm-g3-e4N" secondAttribute="height" multiplier="600:200" id="Iwf-em-HlD"/>
                                         <constraint firstItem="qLm-g3-e4N" firstAttribute="top" secondItem="aXc-Bn-6F1" secondAttribute="top" constant="10" id="JHg-K9-gZN"/>
-                                        <constraint firstAttribute="trailing" secondItem="260-9K-NXX" secondAttribute="trailing" constant="5" id="QNj-2g-CPX"/>
+                                        <constraint firstItem="qLm-g3-e4N" firstAttribute="centerY" secondItem="aXc-Bn-6F1" secondAttribute="centerY" id="K65-38-X9b"/>
                                         <constraint firstAttribute="trailing" secondItem="Z7K-PZ-AXb" secondAttribute="trailing" constant="10" id="RMx-o5-Jgq"/>
-                                        <constraint firstItem="260-9K-NXX" firstAttribute="leading" secondItem="qLm-g3-e4N" secondAttribute="trailing" constant="5" id="Sc5-A0-JTi"/>
                                         <constraint firstItem="Z7K-PZ-AXb" firstAttribute="top" secondItem="aXc-Bn-6F1" secondAttribute="top" constant="10" id="jaX-0E-9ZQ"/>
-                                        <constraint firstItem="Z7K-PZ-AXb" firstAttribute="leading" secondItem="qLm-g3-e4N" secondAttribute="trailing" constant="10" id="q3i-ZX-E9Y"/>
-                                        <constraint firstItem="260-9K-NXX" firstAttribute="top" secondItem="Z7K-PZ-AXb" secondAttribute="bottom" constant="5" id="v0g-xe-jHP"/>
+                                        <constraint firstItem="Z7K-PZ-AXb" firstAttribute="leading" secondItem="qLm-g3-e4N" secondAttribute="trailing" constant="15" id="q3i-ZX-E9Y"/>
                                         <constraint firstAttribute="trailing" secondItem="260-9K-NXX" secondAttribute="trailing" constant="10" id="xB3-38-7af"/>
-                                        <constraint firstItem="260-9K-NXX" firstAttribute="leading" secondItem="qLm-g3-e4N" secondAttribute="trailing" constant="10" id="yZE-Jh-795"/>
+                                        <constraint firstItem="260-9K-NXX" firstAttribute="leading" secondItem="qLm-g3-e4N" secondAttribute="trailing" constant="15" id="yZE-Jh-795"/>
                                         <constraint firstAttribute="bottom" secondItem="qLm-g3-e4N" secondAttribute="bottom" constant="10" id="yiV-ER-ej5"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
-                                            <exclude reference="0zS-ud-6GN"/>
-                                            <exclude reference="B5s-6N-pJ9"/>
-                                            <exclude reference="QNj-2g-CPX"/>
-                                            <exclude reference="Sc5-A0-JTi"/>
-                                            <exclude reference="v0g-xe-jHP"/>
+                                            <exclude reference="JHg-K9-gZN"/>
+                                            <exclude reference="yiV-ER-ej5"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
